src/test/resources/fails/exc6.s
compile nios-ii de0

main:
    r2 = +=-=253=52
end